<resources>
    <string name="app_name">MicroClass</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_code">请输入收到的验证码</string>
    <string name="register_password">密码</string>
    <string name="register">注册</string>
    <string name="third">第三方登录</string>
    <string name="go_to_login">已有账号？去登录</string>


    <string name="homepage">首页</string>
    <string name="course">课程</string>
    <string name="faq">问答</string>
    <string name="mine">我的</string>
    <string name="login">登录</string>
    <string name="click_to_login">点击登录</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="settings">设置</string>
    <string name="add_friend">添加朋友</string>
    <string name="net_error">网络错误</string>
    <string name="registered">您已经注册过了，请直接登录</string>
    <string name="server_error">服务器异常</string>
    <string name="new_user">新用户</string>
    <string name="some_error">出现了某些错误</string>
    <string name="my_friends">我的朋友</string>
    <string name="scan_phone">请输入手机号</string>
    <string name="find">查找</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="already_friend">你们已经是好友了</string>
    <string name="waiting">申请已发出，请等待对方同意</string>
    <string name="not_login">您还未登陆</string>
    <string name="denied_permission">你拒绝了该权限</string>
    <string name="upload_user_image_fail">头像上传失败</string>
    <string name="upload_video_fail">视频上传失败</string>
    <string name="upload_video_success">上传成功</string>
    <string name="front_developing">前端开发</string>
    <string name="mobile_developing">移动开发</string>
    <string name="after_developing">后端开发</string>
    <string name="database_developing">数据库开发</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="nodejs">node.js</string>
    <string name="javascript">JavaScript</string>
    <string name="php">php</string>
    <string name="java">Java</string>
    <string name="python">python</string>
    <string name="c">C</string>
    <string name="cplusplus">C++</string>
    <string name="go">Go</string>
    <string name="csharp">c#</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="mysql">MySQL</string>
    <string name="access">Access</string>
    <string name="oracle">Oracle</string>
    <string name="sqlserver">SQLServer</string>
    <string name="mongodb">MongoDB</string>
    <string name="answer">回复</string>
    <string name="not_null">输入不能为空</string>
    <string name="vote_manager">投票管理</string>
    <string name="msg_not_null">消息不能为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
