<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    >

    <LinearLayout
        android:id="@+id/faq_in_add_friend_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <ImageView
                android:id="@+id/faq_add_friend_img"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/default_img"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/faq_in_add_friend_text"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/add_friend"
                android:gravity="center_vertical"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/faq_in_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/add_friend_edittext"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:hint="@string/scan_phone"
                android:layout_weight="3"
                />
            <Button
                android:id="@+id/add_friend_button"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/find"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fresh_friend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="30dp"
        >
    <android.support.v7.widget.RecyclerView
        android:id="@+id/friend_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_bg"
        />
   </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>