<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/mine_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    >
                    <LinearLayout
                        android:id="@+id/mine_unlogin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:visibility="visible"
                        >
                        <ImageView
                            android:id="@+id/mine_unlogin_img"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/default_img"
                            android:layout_gravity="center_vertical"
                            android:clickable="true"
                            />

                        <TextView
                            android:id="@+id/mine_unlogin_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/click_to_login"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:clickable="true"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/mine_login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:visibility="invisible"
                        >
                        <ImageView
                            android:id="@+id/mine_login_img"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/right"
                            android:layout_gravity="center_vertical"
                            />

                        <TextView
                            android:id="@+id/mine_login_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="杨智勇"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:clickable="true"
                            />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_bg"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <ImageView
                        android:id="@+id/mine_upload_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/default_img"
                        android:layout_gravity="center_vertical"
                        />

                    <TextView
                        android:id="@+id/mine_upload_text"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:text="@string/upload"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="#ffffff"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="#000000"
                    >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <ImageView
                        android:id="@+id/mine_download_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/default_img"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:id="@+id/mine_download_text"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:text="@string/download"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="#ffffff"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="#000000"
                    >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vote_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <ImageView
                        android:id="@+id/vote_manager_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/default_img"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:id="@+id/vote_manager_text"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:text="@string/vote_manager"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_bg"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <ImageView
                        android:id="@+id/mine_settings_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/default_img"
                        android:layout_gravity="center_vertical"
                        />

                    <TextView
                        android:id="@+id/mine_settings_text"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:text="@string/settings"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:layout_marginLeft="10dp"
                        />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--
    <ListView
        android:id="@+id/mine_upload_download"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <ListView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
        -->
</LinearLayout>